--- a/example/06-editor/b/index.html
+++ b/example/06-editor/b/index.html
@@ -5,12 +5,10 @@
   <title>編輯器</title>
 </head>
 <body>
-<!-- <script src="editor.js"></script> -->
 <script>
 var editor = require('./editor')
 </script>
   <label id="filePath"></label><br/>
-  <textarea id="text" style="width:100%; height:80vh">
-  </textarea>
+  <textarea id="text" style="width:100%; height:80vh"></textarea>
 </body>
 </html>
